Correction de tout plein de bugs

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="tab" id="tabCaracters">👥 Personnages</div>
         <div class="tab">👜 Inventaires</div>
+    </header> -->
+    <header>
+        <h3>Claudia</h3>
     </header>
     <main>
         <!-- <canvas id="root" class="fb-80"></canvas> -->
