--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/564e987331.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -15,7 +16,19 @@
         <div class="tab">👜 Inventaires</div>
     </header> -->
     <header>
-        <h3>Claudia</h3>
+        <div class="flex">
+            <div class="fb-30">
+                <h3>Claudia</h3>
+            </div>
+            <div class="fb-30 flex">
+                <div class="fb-50">
+                    <i class="fa-solid fa-user"></i>
+                </div>
+                <div class="fb-50">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <!-- <canvas id="root" class="fb-80"></canvas> -->
