--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <button id="start">Lancer</button>
         </aside> -->
     </main>
-    <script src="/js/caracters.js"></script>
-    <script src="/js/levels.js"></script>
-    <script src="/js/root.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/caracters.js"></script>
+    <script src="js/levels.js"></script>
+    <script src="js/root.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
